<?xml version="1.0"?>
<package format="2">

  <name>i3dr_rosserial_phobos</name>
  <version>0.0.0</version>
  <description>ROS package for programming and communicating with Arduino in i3dr Phobos stereo camera system</description>

  <license>MIT</license>

  <maintainer email="bknight@i3drobotics.com">Ben Knight</maintainer>
  <author email="bknight@i3drobotics.com">Ben Knight</author>

  <url type="repository">https://github.com/i3drobotics/i3dr_rosserial_phobos-ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosserial_arduino</depend>
  <depend>rosserial_client</depend>
  <depend>tf2_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
